--- a/layout.html
+++ b/layout.html
@@ -3,28 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="css.css" />
 </head>
 <body>
-<div id ="headar">
-    <div id="menu1">
-        <h1>Simply<span class="color">.</span></h1>
+<header>
+    <div class="top" style="background: #a65980">
+        <img src="color_purple_blue.jpg" title="logo"/>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">Blog</a></li>
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">ABOUT</a></li>
+                <li><a href="#">SERVICES</a></li>
+                <li><a href="#">PORTFOLIO</a></li>
+                <li><a href="#">BLOG</a></li>
+                <li><a href="#">FEATUES</a></li>
+                <li><a href="#">CONTACTS</a></li>
+
             </ul>
         </nav>
     </div>
-    <div id="menu2">
-        <h1>Simply<span class="color">.</span></h1>
+    <div class="bottom" style="background: #ececec">
+        <h1>FERITA</h1>
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Portfolio</a></li>
             </ul>
         </nav>
+    </div>
+</header>
+<div id="hero-image">
+    <div class="wrapper">
+        <a href="#" class="button-1"> >> </a>
+        <a href="#" class="button-2"> << </a>
     </div>
 </div>
 
