--- a/layout.html
+++ b/layout.html
@@ -24,13 +24,7 @@
     </div>
     <div class="bottom" style="background: #ececec">
         <h1>FERITA</h1>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li> /
-                <li> / </li>
-                <li><a href="#">Portfolio</a></li>
-            </ul>
-        </nav>
+        <p><a href="#">Home</a> / <a href="#">Features</a></p>
     </div>
 </header>
 <div id="hero-image">
@@ -131,7 +125,7 @@
         }
     </script>
 </div>
-<div id="content3" style="width: 100%; height: 400px; margin-top: 50px">
+<div id="content3" style="width: 100%; height: 277px; margin-top: 30px">
     <div id="conten3_left">
         <div class="tab">
             <button class="tablinks" onclick="openTab(event, 'tab1')" id="defaultOpen">TAB TITLE</button>
@@ -142,9 +136,10 @@
 
         <div id="tab1" class="tabcontent">
 
-            <p >Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+
+            <p >Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore<img src="images/features-icon-1.png" align="right">
                 et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                aliquip ex ea commodo consequat.<img src="images/features-icon-1.png" style="float: right"></p>
+                aliquip ex ea commodo consequat.</p>
 
         </div>
 
@@ -201,7 +196,135 @@
         document.getElementById("defaultOpen").click();
         document.getElementById("defaultOpen2").click();
     </script>
+</div>
+</div>
+<div id="list-images"style="width: 1225px;height: 633px; ">
+    <div id="images-top">
+        <img src="images/article-image-2.jpg" >
+        <img src="images/article-image-2.jpg" >
+        <img src="images/article-image-2.jpg" >
+        <img src="images/article-image-2.jpg" >
 
+    </div>
+    <div id="images-bottom">
+        <img src="images/video-placeholder.jpg" >
+        <img src="images/video-placeholder.jpg" >
+    </div>
+</div>
+<div class="headline">
+<div>
+    <h4>Headlin</h4>
+    <p>An element with position: fixed; is positioned relative to the viewport, which means it always stays in the same place even if the page is scrolled. The top, right, bottom, and left properties are used to position the element.
+
+        A fixed element does not leave a gap in the page where it would normally have been located.
+
+        Notice the fixed element in the lower-right corner of the page. Here is the CSS that is used:</p>
+</div>
+    <div id="hang2">
+    <div id="text1">
+        <h4>Headlin</h4>
+        <p>An element with position: fixed; is positioned relative to the viewport, which means it always stays in the same place even if the page is scrolled. The top, right, bottom, and left properties are used to position the element.
+
+            A fixed element does not leave a gap in the page where it would normally have been located.
+
+            Notice the fixed element in the lower-right corner of the page. Here is the CSS that is used:</p>
+    </div>
+    <div id="text2">
+        <h4>Headlin</h4>
+        <p>An element with position: fixed; is positioned relative to the viewport, which means it always stays in the same place even if the page is scrolled. The top, right, bottom, and left properties are used to position the element.
+
+            A fixed element does not leave a gap in the page where it would normally have been located.
+
+            Notice the fixed element in the lower-right corner of the page. Here is the CSS that is used:</p>
+    </div>
+    </div>
+    <div id="hang3">
+    <div id="text3">
+        <h4>Headlin</h4>
+        <p>An element with position: fixed; is positioned relative to the viewport, which means it always stays in the same place even if the page is scrolled. The top, right, bottom, and left properties are used to position the element.
+
+            A fixed element does not leave a gap in the page where it would normally have been located.
+
+            Notice the fixed element in the lower-right corner of the page. Here is the CSS that is used:</p>
+    </div>
+    <div id="text4">
+        <h4>Headlin</h4>
+        <p>An element with position: fixed; is positioned relative to the viewport, which means it always stays in the same place even if the page is scrolled. The top, right, bottom, and left properties are used to position the element.
+
+            A fixed element does not leave a gap in the page where it would normally have been located.
+
+            Notice the fixed element in the lower-right corner of the page. Here is the CSS that is used:</p>
+    </div>
+    </div>
+    <div id="hang5">
+    <div id="text5">
+        <h4>Headlin</h4>
+        <p>An element with position: fixed; is positioned relative to the viewport, which means it always stays in the same place even if the page is scrolled. The top, right, bottom, and left properties are used to position the element.
+
+            A fixed element does not leave a gap in the page where it would normally have been located.
+
+            Notice the fixed element in the lower-right corner of the page. Here is the CSS that is used:</p>
+    </div>
+    <div id="text6">
+        <h4>Headlin</h4>
+        <p>An element with position: fixed; is positioned relative to the viewport, which means it always stays in the same place even if the page is scrolled. The top, right, bottom, and left properties are used to position the element.
+
+            A fixed element does not leave a gap in the page where it would normally have been located.
+
+            Notice the fixed element in the lower-right corner of the page. Here is the CSS that is used:</p>
+    </div>
+    <div id="text7">
+        <h4>Headlin</h4>
+        <p>An element with position: fixed; is positioned relative to the viewport, which means it always stays in the same place even if the page is scrolled. The top, right, bottom, and left properties are used to position the element.
+
+            A fixed element does not leave a gap in the page where it would normally have been located.
+
+            Notice the fixed element in the lower-right corner of the page. Here is the CSS that is used:</p>
+    </div>
+    <div id="text8">
+        <h4>Headlin</h4>
+        <p>An element with position: fixed; is positioned relative to the viewport, which means it always stays in the same place even if the page is scrolled. The top, right, bottom, and left properties are used to position the element.
+
+            A fixed element does not leave a gap in the page where it would normally have been located.
+
+            Notice the fixed element in the lower-right corner of the page. Here is the CSS that is used:</p>
+    </div>
+    </div>
+</div>
+<div id="list-link">
+<div class="wrapper">
+    <div id="links">
+        <ul>
+            <li><h5>Company</h5></li>
+            <li><a href="#"> A fixed element does not leave a gap </a></li>
+            <li><a href="#"> A fixed element does not leave a gap </a></li>
+            <li><a href="#"> A fixed element does not leave a gap </a></li>
+            <li><a href="#"> A fixed element does not leave a gap </a></li>
+        </ul>
+        <ul>
+            <li><h5>Company</h5></li>
+            <li><a href="@"> A fixed element does not leave a gap </a></li>
+            <li><a href="@"> A fixed element does not leave a gap </a></li>
+            <li><a href="@"> A fixed element does not leave a gap </a></li>
+            <li><a href="@"> A fixed element does not leave a gap </a></li>
+        </ul>
+        <ul>
+            <li><h5>Company</h5></li>
+            <li><a href="&"> A fixed element does not leave a gap </a></li>
+            <li><a href="&"> A fixed element does not leave a gap </a></li>
+            <li><a href="&"> A fixed element does not leave a gap </a></li>
+            <li><a href="&"> A fixed element does not leave a gap </a></li>
+        </ul>
+        <ul>
+            <li><h5>Company</h5></li>
+            <li><a href="$"> A fixed element does not leave a gap </a></li>
+            <li><a href="$"> A fixed element does not leave a gap </a></li>
+            <li><a href="$"> A fixed element does not leave a gap </a></li>
+            <li><a href="$"> A fixed element does not leave a gap </a></li>
+        </ul>
+    </div>
+    <div class="clear"></div>
+</div>
 </div>
 </body>
 </html>
