--- a/layout.html
+++ b/layout.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="css.css" />
+    <link rel="stylesheet" href="font/css/font-awesome.min.css">
 </head>
 <body>
 <header>
@@ -303,28 +304,193 @@
         </ul>
         <ul>
             <li><h5>Company</h5></li>
-            <li><a href="@"> A fixed element does not leave a gap </a></li>
-            <li><a href="@"> A fixed element does not leave a gap </a></li>
-            <li><a href="@"> A fixed element does not leave a gap </a></li>
-            <li><a href="@"> A fixed element does not leave a gap </a></li>
+            <li><a href="#"> A fixed element does not leave a gap </a></li>
+            <li><a href="#"> A fixed element does not leave a gap </a></li>
+            <li><a href="#"> A fixed element does not leave a gap </a></li>
+            <li><a href="#"> A fixed element does not leave a gap </a></li>
         </ul>
         <ul>
             <li><h5>Company</h5></li>
-            <li><a href="&"> A fixed element does not leave a gap </a></li>
-            <li><a href="&"> A fixed element does not leave a gap </a></li>
-            <li><a href="&"> A fixed element does not leave a gap </a></li>
-            <li><a href="&"> A fixed element does not leave a gap </a></li>
+            <li><a href="#"> A fixed element does not leave a gap </a></li>
+            <li><a href="#"> A fixed element does not leave a gap </a></li>
+            <li><a href="#"> A fixed element does not leave a gap </a></li>
+            <li><a href="#"> A fixed element does not leave a gap </a></li>
         </ul>
         <ul>
             <li><h5>Company</h5></li>
-            <li><a href="$"> A fixed element does not leave a gap </a></li>
-            <li><a href="$"> A fixed element does not leave a gap </a></li>
-            <li><a href="$"> A fixed element does not leave a gap </a></li>
-            <li><a href="$"> A fixed element does not leave a gap </a></li>
+            <li><a href="#"> A fixed element does not leave a gap </a></li>
+            <li><a href="#"> A fixed element does not leave a gap </a></li>
+            <li><a href="#"> A fixed element does not leave a gap </a></li>
+            <li><a href="#"> A fixed element does not leave a gap </a></li>
         </ul>
     </div>
     <div class="clear"></div>
 </div>
 </div>
+<div id="text-button">
+    <h2>
+        Headline
+    </h2>
+    <p>A fixed element does not leave a gap in the page where it would normally have been located.</p>
+    <a href="#" class="button"> >> </a>
+</div>
+<div class="tables">
+    <div id="tables-top">
+    <table id="t01">
+        <tr>
+            <th width="211">Firstname</th>
+            <th width="239">Lastname</th>
+            <th width="518">Age</th>
+            <th width="237">Age</th>
+        </tr>
+        <tr>
+            <td>Jill</td>
+            <td>Smith</td>
+            <td>50</td>
+            <td>50</td>
+        </tr>
+        <tr>
+            <td>Eve</td>
+            <td>Jackson</td>
+            <td>94</td>
+            <td>94</td>
+        </tr>
+        <tr>
+            <td>John</td>
+            <td>Doe</td>
+            <td>80</td>
+            <td>80</td>
+        </tr>
+        <tr>
+            <td>John</td>
+            <td>Doe</td>
+            <td>80</td>
+            <td>80</td>
+        </tr>
+    </table>
+    </div>
+    <div id="tables-bottom" style="float: left; width: 100%; height: 300px; margin-top: 40px">
+        <table width="40%" id="t02">
+            <tr>
+                <th width="97">Firstname</th>
+                <th width="196">Lastname</th>
+                <th width="181">Age</th>
+
+            </tr>
+            <tr>
+                <td>Jill</td>
+                <td>Smith</td>
+                <td>50</td>
+
+            </tr>
+            <tr>
+                <td>Eve</td>
+                <td>Jackson</td>
+                <td>94</td>
+
+            </tr>
+            <tr>
+                <td>John</td>
+                <td>Doe</td>
+                <td>80</td>
+
+            </tr>
+            <tr>
+                <td>John</td>
+                <td>Doe</td>
+                <td>80</td>
+
+
+            </tr>
+
+        </table>
+        <table width="40%" id="t03">
+            <tr>
+                <th width="97">Firstname</th>
+                <th width="195">Lastname</th>
+                <th width="182">Age</th>
+
+            </tr>
+            <tr>
+                <td>Jill</td>
+                <td>Smith</td>
+                <td>50</td>
+
+            </tr>
+            <tr>
+                <td>Eve</td>
+                <td>Jackson</td>
+                <td>94</td>
+
+            </tr>
+            <tr>
+                <td>John</td>
+                <td>Doe</td>
+                <td>80</td>
+
+            </tr>
+            <tr>
+                <td>John</td>
+                <td>Doe</td>
+                <td>80</td>
+
+
+            </tr>
+
+        </table>
+
+        </table>
+    </div>
+
+</div>
+<footer>
+<div class="top" style="background: #a65980 ; height: 400px">
+    <div id="footer-info">
+        <img style="margin-left: -10px" src="color_purple_blue.jpg" title="logo"/><br>
+        <br>
+        <p>Copyright 2014 CompanyName. All rights reservedCopyright 2014 CompanyName. All rights reserved.Copyright 2014 CompanyName. All rights reserved.</p><br>
+        <br>
+        <br>
+        <p>Phone: &nbsp &nbsp &nbsp &nbsp<span style="font-size: 30px">01699807884</span></p><br>
+        <p>Email: &nbsp &nbsp &nbsp &nbsp<span style="font-size: 30px">info@modu.vn</span></p>
+
+    </div>
+    <div id="footer-info2">
+        <ul>
+            <li><h5>Company</h5></li>
+            <li><a href="#"> A fixed </a></li>
+            <li><a href="#"> A fixed </a></li>
+            <li><a href="#"> A fixed </a></li>
+            <li><a href="#"> A fixed </a></li>
+            <li><a href="#"> A fixed  </a></li>
+            <li><a href="#"> A fixed  </a></li>
+        </ul>
+        <ul>
+            <li><h5>Company</h5></li>
+            <li><a href="#"> A fixed  </a></li>
+            <li><a href="#"> A fixed  </a></li>
+            <li><a href="#"> A fixed  </a></li>
+            <li><a href="#"> A fixed  </a></li>
+            <li><a href="#"> A fixed  </a></li>
+            <li><a href="#"> A fixed  </a></li>
+        </ul>
+    </div>
+    <div id="footer-info3">
+        <h2>from the <b>BLOG</b></h2>
+        <p><img style="width: 50px ; margin-right: 20px" src="images/features-icon-1.png">A fixed element does not leave a gap in the page where it would normally have been located</p>
+        <p><img style="width: 50px ; margin-right: 20px" src="images/features-icon-1.png">A fixed element does not leave a gap in the page where it would normally have been located</p>
+
+    </div>
+</div>
+    <div class="bottom">
+<p style="float: left; margin-left: 146px; color: white">2013 ModusVersus</p>
+        <div id="linkbottom">
+            <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa fa-youtube"></a>
+            <a href="#" class="fa fa-twitter"></a>
+            <a href="#" class="fa fa-google"></a>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
