--- a/layout.html
+++ b/layout.html
@@ -22,6 +22,18 @@
 
             </ul>
         </nav>
+
+        <tr>
+            <td style="border-style:solid none solid solid;border-color:#4B7B9F;border-width:1px;">
+        <input type="text" name="zoom_query" style=" width: 128px;border: 0px solid;height: 25px; margin-top: 64px;padding: 0px;margin-left: -150px;position: relative;border-radius: 3px">
+        </td>
+        <td style="border-style:solid;border-color:#4B7B9F;border-width:1px;">
+        <input type="submit" value="" style="border-style: none; background: url('images/search.PNG') no-repeat; width: 33px; height: 55px;margin-top: 10px">
+        </td>
+        </tr>
+
+
+
     </div>
     <div class="bottom" style="background: #ececec">
         <h1>FERITA</h1>
@@ -39,7 +51,7 @@
     </div>
 
     <div class="right">
-         <img id="top" src="images/article-image-2.jpg" /><br>
+        <img id="top" src="images/article-image-2.jpg" /><br>
         <h3>SIDEBAR GALLERY</h3><br>
 
         <img src="images/features-icon-1.png" height="45" width="70" vspace="7px" hspace="5px"/>
@@ -126,7 +138,7 @@
         }
     </script>
 </div>
-<div id="content3" style="width: 100%; height: 277px; margin-top: 30px">
+<div id="content3" style="width: 100%; height: 277px; margin-top: 120px">
     <div id="conten3_left">
         <div class="tab">
             <button class="tablinks" onclick="openTab(event, 'tab1')" id="defaultOpen">TAB TITLE</button>
@@ -295,28 +307,28 @@
 <div id="list-link">
 <div class="wrapper">
     <div id="links">
-        <ul>
+        <ul id="list1">
+            <li><h5>Company</h5></li>
+            <li ><a href="#"> A fixed element does not leave a gap </a></li>
+            <li><a href="#"> A fixed element does not leave a gap </a></li>
+            <li><a href="#"> A fixed element does not leave a gap </a></li>
+            <li><a href="#"> A fixed element does not leave a gap </a></li>
+        </ul>
+        <ul id="list2">
             <li><h5>Company</h5></li>
             <li><a href="#"> A fixed element does not leave a gap </a></li>
             <li><a href="#"> A fixed element does not leave a gap </a></li>
             <li><a href="#"> A fixed element does not leave a gap </a></li>
             <li><a href="#"> A fixed element does not leave a gap </a></li>
         </ul>
-        <ul>
+        <ul id="list3">
             <li><h5>Company</h5></li>
             <li><a href="#"> A fixed element does not leave a gap </a></li>
             <li><a href="#"> A fixed element does not leave a gap </a></li>
             <li><a href="#"> A fixed element does not leave a gap </a></li>
             <li><a href="#"> A fixed element does not leave a gap </a></li>
         </ul>
-        <ul>
-            <li><h5>Company</h5></li>
-            <li><a href="#"> A fixed element does not leave a gap </a></li>
-            <li><a href="#"> A fixed element does not leave a gap </a></li>
-            <li><a href="#"> A fixed element does not leave a gap </a></li>
-            <li><a href="#"> A fixed element does not leave a gap </a></li>
-        </ul>
-        <ul>
+        <ul id="list4">
             <li><h5>Company</h5></li>
             <li><a href="#"> A fixed element does not leave a gap </a></li>
             <li><a href="#"> A fixed element does not leave a gap </a></li>
@@ -332,7 +344,7 @@
         Headline
     </h2>
     <p>A fixed element does not leave a gap in the page where it would normally have been located.</p>
-    <a href="#" class="button"> >> </a>
+    <a href="#" class="button"><b>VIEW MORE</b> </a>
 </div>
 <div class="tables">
     <div id="tables-top">
