--- a/layout.html
+++ b/layout.html
@@ -24,12 +24,14 @@
         </nav>
 
         <tr>
+            <form>
             <td style="border-style:solid none solid solid;border-color:#4B7B9F;border-width:1px;">
         <input type="text" name="zoom_query" style=" width: 128px;border: 0px solid;height: 25px; margin-top: 64px;padding: 0px;margin-left: -150px;position: relative;border-radius: 3px">
         </td>
         <td style="border-style:solid;border-color:#4B7B9F;border-width:1px;">
         <input type="submit" value="" style="border-style: none; background: url('images/search.PNG') no-repeat; width: 33px; height: 55px;margin-top: 10px">
         </td>
+            </form>
         </tr>
 
 
@@ -40,6 +42,7 @@
         <p><a href="#">Home</a> / <a href="#">Features</a></p>
     </div>
 </header>
+<main>
 <div id="hero-image">
     <div class="wrapper">
     </div>
@@ -455,6 +458,7 @@
     </div>
 
 </div>
+</main>
 <footer>
 <div class="top" style="background: #a65980 ; height: 400px">
     <div id="footer-info">
